Fixing control button spacing

--- a/styles/control-page.css
+++ b/styles/control-page.css
@@ -30,8 +30,10 @@
 }
 
 #control-page #control-column span {
-    width     : 100%;
-    color     : rgba(255, 255, 255, 0.5);
-    font-size : 25px;
-    text-align: center;
+    width         : 100%;
+    margin-top    : 90%;
+    color         : rgba(255, 255, 255, 0.5);
+    font-size     : 25px;
+    text-align    : center;
+    vertical-align: middle;
 }
